# bioneer

./: .pre-commit-config.yaml  README.md  pyproject.toml
bioneer/: auth.py  cli.py  logging.py  query.py  vectorstore.py
data/: data_bcftools_view.txt
tests/: test_ask.py
