[tool.poetry]
name = "bioneer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.6.1"
langchain = "^0.0.352"
click = "^8.1.7"
python-dotenv = "^1.0.0"
sentence-transformers = "^2.2.2"
chromadb = "^0.4.21"

[tool.poetry.scripts]
bioneer = "bioneer.cli:cli"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
